working kafka packer

--- a/packer/files/server.properties
+++ b/packer/files/server.properties
@@ -4,7 +4,7 @@ num.io.threads=8
 socket.send.buffer.bytes=102400
 socket.receive.buffer.bytes=102400
 socket.request.max.bytes=104857600
-log.dirs=/tmp/kafka-logs
+log.dirs=/home/kafka/logs
 num.partitions=1
 num.recovery.threads.per.data.dir=1
 offsets.topic.replication.factor=1
@@ -16,3 +16,4 @@ log.retention.check.interval.ms=300000
 zookeeper.connect=localhost:2181
 zookeeper.connection.timeout.ms=18000
 group.initial.rebalance.delay.ms=0
+delete.topic.enable = true
