--- a/packer/files/zoo.cfg
+++ b/packer/files/zoo.cfg
@@ -1,5 +1,8 @@
-tickTime=2000
+tickTime=3000
 initLimit=10
 syncLimit=5
 dataDir=/opt/zookeeper/zookeeper/data
 clientPort=2181
+server.1=zookeeper1.YOUR_DOMAIN.COM:2888:3888
+server.2=zookeeper2.YOUR_DOMAIN.COM:2888:3888
+server.2=zookeeper2.YOUR_DOMAIN.COM:2888:3888
