set kafka properties to the zookeeper domain

--- a/packer/files/server.properties
+++ b/packer/files/server.properties
@@ -13,7 +13,7 @@ transaction.state.log.min.isr=1
 log.retention.hours=168
 log.segment.bytes=1073741824
 log.retention.check.interval.ms=300000
-zookeeper.connect=localhost:2181
+zookeeper.connect=zookeeper1.YOUR_DOMAIN.COM:2181
 zookeeper.connection.timeout.ms=18000
 group.initial.rebalance.delay.ms=0
 delete.topic.enable = true
